--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- /* References https://github.com/mikhail-cct/CA1-In-class-Demo -- Code that i used as base for my CA. i used the example 
+and changed his code for what i needed.
+https://www.w3schools.com/ - Most used to get CSS 
+My Own codes from previus assigments
+-->
+
+
 <head>
 <img class="Logo" src="images/Logo.jpg" width="1350" height="350>
   <meta charset="utf-8">
@@ -52,7 +59,7 @@
                    
                             <th><input class="form-control" type="text" name="Types" placeholder="Types"></th>
                             <th><input class="form-control" type="text" name="TicketsAvaliable" placeholder="TicketsAvaliable"></th>
-                            <th><input class="form-control" type="text" name="price" placeholder="Price"></th>
+                            <th><input class="form-control" type='number' name="price" placeholder="Price"></th>
                       
                     
 					<button type="submit" class="btn btn-primary btn-block">Submit</button>
