--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,18 @@ and changed his code for what i needed.
 https://www.w3schools.com/ - Most used to get CSS 
 My Own codes from previus assigments
 -->
+<script>
+function myFunction() {
+  var txt;
+  var person = prompt("Please enter the email you want to send your ticket:", "Someone@gmail.com");
+}
+</script>
 
+<script>
+function myFunction1() {
+  alert("Your table was update sucessfully");
+}
+</script>
 
 <head>
 <img class="Logo" src="images/Logo.jpg" width="1350" height="350>
@@ -62,7 +73,7 @@ My Own codes from previus assigments
                             <th><input class="form-control" type='number' name="price" placeholder="Price"></th>
                       
                     
-					<button type="submit" class="btn btn-primary btn-block">Submit</button>
+					<button onclick="myFunction1()"type="submit" class="btn btn-primary btn-block">Submit</button>
 				</form>
               
 			</div>
